@@ -1,3 +1,9 @@
+2019-04-01 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Do not use angle unit in Si() and Ci()
+	* Convert trigonometric arguments to selected angle unit
+	* Hide current angle unit from result in qalc
+
 2019-03-29 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Calculation of Si(), Ci(), Shi(), and Chi()
